examples/tailscale.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-delivery-funnel
  namespace: monitoring
  annotations:
    tailscale.com/expose: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: loki-delivery-funnel.<tailnet>
      http:
        paths:
          - path: /loki
            pathType: Prefix
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
  tls:
    - hosts:
        - loki-delivery-funnel.<tailnet>
